<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.mycompany</groupId>
    <artifactId>joseabelSistema</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>AbsoluteLayout</groupId>
            <artifactId>AbsoluteLayout</artifactId>
            <version>1.0</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-core</artifactId>
            <version>5.8.4</version> <!-- o la versión más reciente -->
        </dependency>

        <dependency>
            <groupId>mysql-connector-j-9.2.0</groupId>
            <artifactId>mysql-connector-j-9.2.0</artifactId>
            <version>9.2.0</version>
        </dependency>
        <dependency>
            <groupId>NefAnimacion_V2.1_jdk18</groupId>
            <artifactId>NefAnimacion_V2.1_jdk18</artifactId>
            <version>2.1</version>
        </dependency>
        <dependency>
            <groupId>RojeruSan.lib</groupId>
            <artifactId>RojeruSan.lib</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>RojeruSan.parte1</groupId>
            <artifactId>RojeruSan.parte1</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>RSMaterialComponents_3.0</groupId>
            <artifactId>RSMaterialComponents_3.0</artifactId>
            <version>3.0</version>
        </dependency>
        <dependency>
            <groupId>javax.mail</groupId>
            <artifactId>javax.mail</artifactId>
            <version>1.6.2</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>KGradientPanel</groupId>
            <artifactId>KGradientPanel</artifactId>
            <version>1.0.2</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.toedter</groupId>
            <artifactId>jcalendar</artifactId>
            <version>1.4</version>
        </dependency>
        <dependency>
            <groupId>unknown.binary</groupId>
            <artifactId>RojeruSan.full_9.6</artifactId>
            <version>SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>unknown.binary</groupId>
            <artifactId>RojeruSan.full</artifactId>
            <version>SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>unknown.binary</groupId>
            <artifactId>RSCustomPopuMenu</artifactId>
            <version>SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.10.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.10.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.10.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openurp.hr</groupId>
            <artifactId>openurp-hr-api</artifactId>
            <version>0.20.4</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.openurp.people.contact</groupId>
            <artifactId>openurp-people-contact-api</artifactId>
            <version>0.5.2</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>unknown.binary</groupId>
            <artifactId>RojeruSan.full_9.4</artifactId>
            <version>SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <scope>test</scope>
            <version>2.44.0</version>
        </dependency>
        <dependency>
            <groupId>com.opera</groupId>
            <artifactId>operadriver</artifactId>
            <scope>test</scope>
            <version>1.5</version>
            <exclusions>
                <exclusion>
                    <groupId>org.seleniumhq.selenium</groupId>
                    <artifactId>selenium-remote-driver</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
            <version>4.11</version>
        </dependency>
        
        <dependency>
            <groupId>com.twelvemonkeys.imageio</groupId>
            <artifactId>imageio-webp</artifactId>
            <version>3.8.2</version>
        </dependency>
        
        <dependency>
            <groupId>LIB_IDETS</groupId>
            <artifactId>LIB_IDETS</artifactId>
            <version>1.0.2</version>
            <type>jar</type>
            
        </dependency>
        <dependency>
            <groupId>org.apache.pdfbox</groupId>
            <artifactId>pdfbox</artifactId>
            <version>2.0.27</version>
        </dependency>
        
    </dependencies>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>23</maven.compiler.release>
        <exec.mainClass>com.mycompany.joseabelsistema.JoseabelSistema</exec.mainClass>
    </properties>
    <name>joseabelsistema</name>
    <repositories>
        <repository>
            <id>unknown-jars-temp-repo</id>
            <name>A temporary repository created by NetBeans for libraries and jars it could not identify. Please replace the dependencies in this repository with correct ones and delete this repository.</name>
            <url>file:${project.basedir}/lib</url>
        </repository>
    </repositories>
</project>